expressatt: bluetooth: delay hci_qcomm_init until BT is started
this is how qcom does it

Change-Id: Ib938851c57928ed09cdae98aafcff63c0a2560b8

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -817,6 +817,7 @@ on property:ro.data.large_tcp_window_size=true
 
 on property:bluetooth.hciattach=true
     setprop bluetooth.status on
+    start hciattach
 
 on property:bluetooth.hciattach=false
     setprop bluetooth.status off
