expressatt: Wait for kgsl nodes in early init
4 times out of 5, /dev/kgsl-* isn't ready by the time surfaceflinger
starts, so adreno libraries fail to load properly. This causes a blank
screen during most of boot. Wait for dev/kgsl-3d0 to become ready before
proceeding.

Change-Id: Iad211e8a3e19913f664fa5234c91aa40b287ff82

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -1,3 +1,6 @@
+on early-init
+    wait /dev/kgsl-3d0
+
 on post-fs-data
     write /dev/wcnss_wlan 1
     write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
