expressatt: init: clean up deprecated and redundant code

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -52,7 +52,7 @@ on boot
 service hciattach /system/bin/sh /system/etc/init.bt.sh
     class late_start
     user bluetooth
-    group qcom_oncrpc bluetooth net_bt_admin system
+    group bluetooth net_bt_admin system
     disabled
     oneshot
 
