init: set orientationd domain in init
Change-Id: Ic46c6ce89e253e0f0f8e32c7b5b259f05a3e6b88

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -67,6 +67,7 @@ service orientationd /system/bin/orientationd
     user compass
     group system input
     disabled
+    seclabel u:object_r:orientationd:s0
 
 on property:ro.yas.enable=true
     start orientationd
