--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,6 +29,7 @@ import init.qcom.usb.rc
 
 on early-init
     write /sys/block/mmcblk0/queue/scheduler noop
+    setprop sys.perf.profile 2
 
     mkdir /firmware 0771 system system
     symlink /data/tombstones /tombstones
